source4/lib/socket/socket_unix.c
@@ -362,7 +362,7 @@ static struct socket_address *unixdom_get_peer_addr(struct socket_context *sock,
 
 static struct socket_address *unixdom_get_my_addr(struct socket_context *sock, TALLOC_CTX *mem_ctx)
 {
-	struct sockaddr_in *local_addr;
+	struct sockaddr_un *local_addr;
 	socklen_t len = sizeof(*local_addr);
 	struct socket_address *local;
 	int ret;
@@ -373,7 +373,7 @@ static struct socket_address *unixdom_get_my_addr(struct socket_context *sock, T
 	}
 	
 	local->family = sock->backend_name;
-	local_addr = talloc(local, struct sockaddr_in);
+	local_addr = talloc(local, struct sockaddr_un);
 	if (!local_addr) {
 		talloc_free(local);
 		return NULL;
